Fix overflow & Remake dimensions of the mobile version

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 @media only screen and (max-width: 767px) {
   .body {
     position: relative;
-    width: 375px;
+    width: auto;
     background: rgba(232, 232, 232, 0.875);
     overflow-x: hidden;
     margin-left: auto;
@@ -16,7 +16,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 692px;
     background: #fff;
     border-end-start-radius: 50px;
   }
@@ -26,14 +25,16 @@
   .toolbar {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    width: 339px;
+    align-items: center;
+    background-color: #fff;
+    justify-content: space-between;
   }
 
   .logo {
     display: flex;
     align-items: center;
     padding: 10px 12px;
+    margin-left: 5%;
   }
 
   .logo a {
@@ -53,13 +54,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: auto;
+    margin-right: 5%;
   }
 
   .menu-list {
     list-style-type: none;
     visibility: hidden;
     height: 1px;
+    width: 1px;
   }
 
   .normal-button {
@@ -118,13 +120,15 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 375px;
-    height: 604px;
+    width: auto;
+    height: auto;
     padding: 114px 24px;
     gap: 12px;
     background-image: url(./img/header-shapes_mobile.svg);
     background-position: center;
     background-position-y: 14px;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .primary-text-header {
@@ -175,21 +179,26 @@
 
   .social-media-icons {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
   }
 
   .header-icons {
+    display: flex;
     list-style-type: none;
-    margin: 0;
     padding: 0;
+    gap:15%
   }
 
   .header-icons li {
-    float: left;
-    margin-right: 15px;
+    display: flex;
+    align-items: center;
   }
 
+  .sm-icons img{
+    width:auto;
+    height: auto;
+  }
   /* Works */
 
   .work {
@@ -560,7 +569,7 @@
     height: 779px;
     background: #6070ff;
     background-image: url(./img/contact\ form\ shapes-mobile.svg);
-    background-position: 153px 0;
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
@@ -581,7 +590,7 @@
     font-size: 20px;
     line-height: 28px;
     text-align: center;
-    color: #ebebff;
+    color: #b5b5ec;
     margin-left: 24px;
     margin-right: 24px;
     margin-bottom: 35px;
@@ -660,7 +669,7 @@
 
   /* Toolbar */
 
-  .container1 header {
+  #header {
     position: fixed;
     width: 100%;
   }
@@ -735,7 +744,6 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    margin-top: 5%;
     gap: 10px;
     background-image: url(./img/Desktop/Header-background.svg);
     background-position: center;
@@ -819,6 +827,7 @@
     align-items: center;
     padding: 142px;
     gap: 142px;
+    overflow: hidden;
   }
 
   .card-works {
@@ -831,6 +840,7 @@
     border-radius: 16px;
     background: #fff;
     box-sizing: border-box;
+    overflow: hidden;
   }
 
   #card-reverse-1,
@@ -845,11 +855,9 @@
   }
 
   .snapshoot {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 66%;
+    display: block;
     border-radius: 8px;
+    overflow: hidden;
   }
 
   .left-block {
@@ -874,25 +882,26 @@
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
-
-    /* or 130% */
-
-    /* Theme 1 / Neutrals 1 */
     color: #091e42;
   }
 
   .frame-2 {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 12px;
-    height: 25px;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    align-items: center;
+    gap: 1.5vh;
+    height: auto;
+  }
+
+  .frame-2 p{
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
   .client {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     color: #344563;
     height: 25px;
   }
@@ -900,15 +909,15 @@
   .role {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     color: #6b778c;
-    height: 25px;
+    background-color: transparent ;
   }
 
   .year {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     color: #6b778c;
     height: 25px;
   }
@@ -926,7 +935,9 @@
     width: 8px;
     height: 8px;
     background-image: url(./img/Counter.svg);
+    
   }
+
 
   .secondary-text-work p {
     font-family: 'Poppins', sans-serif;
@@ -1153,8 +1164,7 @@
   }
 
   .frame-list {
-    width: 122px;
-    height: 120px;
+    width: 100%;
     padding: 12px 12px;
     display: flex;
     flex-direction: column;
@@ -1166,6 +1176,8 @@
 
   .frame-img {
     background: transparent;
+    width: auto;
+    height: auto;
   }
 
   .frame-text {
